welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:14: error: ambiguous reference to overloaded definition,
both method % in class Int of type (x: Char)Int
and  method % in class Int of type (x: Short)Int
match expected type ?
		} else if (y%2=0) {
                            ^